Support multi-column primary key
