# goapi/xdbapi/api/openapi.yaml
@@ -945,7 +945,9 @@ components:
                 dbColumn: dbColumn
               tableName: tableName
               primaryKey:
-                dbQueryValue: dbQueryValue
+              - dbQueryValue: dbQueryValue
+                dbColumn: dbColumn
+              - dbQueryValue: dbQueryValue
                 dbColumn: dbColumn
             - initialWriteMode: null
               initialWrite:
@@ -955,7 +957,9 @@ components:
                 dbColumn: dbColumn
               tableName: tableName
               primaryKey:
-                dbQueryValue: dbQueryValue
+              - dbQueryValue: dbQueryValue
+                dbColumn: dbColumn
+              - dbQueryValue: dbQueryValue
                 dbColumn: dbColumn
         namespace: namespace
         processType: processType
@@ -1001,7 +1005,9 @@ components:
               dbColumn: dbColumn
             tableName: tableName
             primaryKey:
-              dbQueryValue: dbQueryValue
+            - dbQueryValue: dbQueryValue
+              dbColumn: dbColumn
+            - dbQueryValue: dbQueryValue
               dbColumn: dbColumn
           - initialWriteMode: null
             initialWrite:
@@ -1011,7 +1017,9 @@ components:
               dbColumn: dbColumn
             tableName: tableName
             primaryKey:
-              dbQueryValue: dbQueryValue
+            - dbQueryValue: dbQueryValue
+              dbColumn: dbColumn
+            - dbQueryValue: dbQueryValue
               dbColumn: dbColumn
       properties:
         timeoutSeconds:
@@ -1032,7 +1040,9 @@ components:
             dbColumn: dbColumn
           tableName: tableName
           primaryKey:
-            dbQueryValue: dbQueryValue
+          - dbQueryValue: dbQueryValue
+            dbColumn: dbColumn
+          - dbQueryValue: dbQueryValue
             dbColumn: dbColumn
         - initialWriteMode: null
           initialWrite:
@@ -1042,7 +1052,9 @@ components:
             dbColumn: dbColumn
           tableName: tableName
           primaryKey:
-            dbQueryValue: dbQueryValue
+          - dbQueryValue: dbQueryValue
+            dbColumn: dbColumn
+          - dbQueryValue: dbQueryValue
             dbColumn: dbColumn
       properties:
         tableConfigs:
@@ -1060,13 +1072,17 @@ components:
           dbColumn: dbColumn
         tableName: tableName
         primaryKey:
-          dbQueryValue: dbQueryValue
+        - dbQueryValue: dbQueryValue
+          dbColumn: dbColumn
+        - dbQueryValue: dbQueryValue
           dbColumn: dbColumn
       properties:
         tableName:
           type: string
         primaryKey:
-          $ref: '#/components/schemas/TableColumnValue'
+          items:
+            $ref: '#/components/schemas/TableColumnValue'
+          type: array
         initialWrite:
           items:
             $ref: '#/components/schemas/TableColumnValue'
